# cookiecutter-python

./: cookiecutter.json
{{cookiecutter.directory_name}}/: Makefile  pyproject.toml  {{cookiecutter.directory_name}}.py
{{cookiecutter.directory_name}}/docs/: conf.py  index.rst
{{cookiecutter.directory_name}}/tests/: test_{{cookiecutter.directory_name}}.py
